--- a/Photo/Photo.Android/Properties/AndroidManifest.xml
+++ b/Photo/Photo.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Photo">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="Photo.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Photo" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="12" />
+	
+	<application android:label="Photo.Android">
+ 
+  </application>
 </manifest>
